--- a/wp-content/plugins/akismet/_inc/akismet.css
+++ b/wp-content/plugins/akismet/_inc/akismet.css
@@ -237,7 +237,7 @@ table.comments td.comment p a:after {
 	right: 10px;
 	font-size: 140px;
 	color: #769F33;
-	font-family: Georgia, "Times New Roman", Times, serif;
+	font-family: Georgia, "Bree Serif", Times, serif;
 	z-index: 1;
 }
 
